--- a/classes/class 7/examples/analysis.html
+++ b/classes/class 7/examples/analysis.html
@@ -55,7 +55,7 @@
             // console.log('FFT - ' + fft.getValue())
 
             const normalizedLevel = 1 - meter.getLevel() / -70
-            // console.log("normalized Level " + normalizedLevel) 
+             console.log("normalized Level " + normalizedLevel) 
             // console.log("frequency position" +  freqDomain.indexOf(Math.max.apply(Math, freqDomain)) / 4)
             
             if(normalizedLevel > 0.85 && lastLevel < 0.85) {
